@@ -1,10 +1,31 @@
-import BuildSettings._
 import Dependencies._
+import BuildSettings._
+import com.typesafe.sbt.packager.docker._
 
-lazy val akkaDeps = Seq(akkaCluster)
+enablePlugins(JavaServerAppPackaging, sbtdocker.DockerPlugin, AshScriptPlugin)
 
-lazy val `sbr-lease` = (project in file("."))
-  .settings(commonSettings: _*)
-  .settings(
-    libraryDependencies ++= akkaDeps
-  )
+packageName in Docker := "akka-sbr-lease-example"
+
+version := buildVersion
+
+dockerExposedPorts := Seq(8080, 8558, 2552)
+
+dockerBaseImage := "openjdk:8-jre"
+
+mainClass in Compile := Some("sample.cluster.DemoApp")
+
+dockerCommands :=
+  dockerCommands.value.flatMap {
+    case ExecCmd("ENTRYPOINT", args @ _*) =>
+      Seq(Cmd("ENTRYPOINT", args.mkString(" ")))
+    case v => Seq(v)
+  }
+
+javaOptions in Universal ++= Seq(
+  "-J-XX:+UnlockExperimentalVMOptions",
+  "-J-XX:+UseCGroupMemoryLimitForHeap"
+)
+
+javaOptions in reStart ++= (javaOptions in run).value
+
+libraryDependencies ++= Seq(akkaSlf4J, logback, akkaDiscovery, akkaPersistence, akkaClusterSharding, akkaManagementCluster, akkaClusterBootstrap, sbr)
